# ScrapperBoletinOficialV2

./: .gitignore  main.py  pyproject.toml  requirements.txt  settings.toml
etc/pages/: example_boletin.html
src/controller/: scrapper.py
src/db/: repository.py
src/model/: model.py
