[tool.poetry]
name = "scrapperboletinoficialv2"
version = "0.1.0"
description = ""
authors = ["Ignacio Alvarez <ignacionicolasalvarez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.1.3"
pymongo = "^4.3.3"
dynaconf = "^3.1.12"
requests = "^2.28.2"
tomli = "^2.0.1"
typer = "^0.7.0"
pydantic = "^1.10.7"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
